--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: python
 python:
   - 3.6
-  - 3.7
-
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 cache: pip
-
 install:
   - pip install black
   - pip install pycodestyle
-
 script:
   - echo $STREAM_KEY
   - python setup.py test
-
 after_script:
   - "black stream_chat"
   - "pycodestyle --ignore=E501,E225,W293 stream_chat"
