install codecov on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache: pip
 install:
   - pip install black
   - pip install pycodestyle
+  - pip install codecov
 script:
   - echo $STREAM_KEY
   - python setup.py test
