--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 matrix:
   include:
+    - python: 3.4
+    - python: 3.5
     - python: 3.6
     - python: 3.7
       dist: xenial
