--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ cache: pip
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]]; then pip install black; fi
   - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]]; then pip install pycodestyle; fi
-  - pip install codecov
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]]; then pip install pytest-cov; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]]; then pip install codecov; fi
 script:
   - echo $STREAM_KEY
   - python setup.py test
@@ -19,4 +20,4 @@ script:
   - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]]; then pycodestyle --ignore=E501,E225,W293 stream_chat; fi
   - python setup.py install
 after_script:
-  - "codecov"
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]]; then codecov; fi
