--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: python
-dist: xenial
 matrix:
   include:
     - python: 3.5
     - python: 3.6
     - python: 3.7
     - python: 3.8
-      sudo: true
 cache: pip
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == 3.7 ]]; then pip install black; fi
@@ -16,7 +14,7 @@ install:
 script:
   - echo $STREAM_KEY
   - python setup.py test
-  - if [[ $TRAVIS_PYTHON_VERSION == 3.7 ]]; then black stream_chat; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.7 ]]; then black --check stream_chat; fi
   - if [[ $TRAVIS_PYTHON_VERSION == 3.7 ]]; then pycodestyle --ignore=E501,E225,W293 stream_chat; fi
   - python setup.py install
 after_script:
