--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         if: ${{ matrix.python == '3.7' }}
         run: make lint
 
-      - name: Install, test and code coverage with ${{ matrix.python }}
+      - name: Test with ${{ matrix.python }}
         env:
           STREAM_KEY: ${{ secrets.STREAM_KEY }}
           STREAM_SECRET: ${{ secrets.STREAM_SECRET }}
